# pixi-board

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: audioWaveform.ts  boardToolbarController.ts  desktopRuntimeAdapter.ts  main.ts  mainShell.ts  pixi.ts  pluginManagerController.ts  pluginManagerListView.ts  pluginSortController.ts  projectSessionController.ts  projectSwitcherController.ts  status.ts  styles.css  tauriAssets.ts  tauriBridge.ts  tauriFileDialogs.ts  tauriMcpBridge.ts  tauriPlugins.ts  tauriProjects.ts  utils.ts  vite-env.d.ts  whiteboard.ts  whiteboardAppController.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  mcp_bridge.rs  models.rs  project_files.rs  project_store.rs
apps/desktop/src-tauri/src/asset_store/: catalog.rs  derivatives.rs  importer.rs  mod.rs
apps/mcp-server/: README.md  package.json  tsconfig.json  tsup.config.ts
apps/mcp-server/src/: appRoot.ts  assetCapabilities.ts  boardCapabilities.ts  bridgeAvailability.ts  capabilities.ts  capabilityTypes.ts  dto.ts  errors.ts  filter.ts  index.ts  jsonRpc.ts  mcpDispatcher.ts  pluginArchive.ts  pluginConfig.ts  pluginErrors.ts  (+13 more)
docs/: architecture.md  performance.md  plugin-development.md
plugin-packages/: README.md
scripts/: pack-board-plugin.mjs  publish-mcp.mjs
(+131 files in other folders)
